added link for project 1 site

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       </div>
       <div class="col-md-4" id="box">
         <h1>Links</h1>
-        <img src="./Images/Empty file.png" alt="file icon">
+        <h2>Project 1 Cozone</h2>
         <br>
-        <p id=link>empty link</p>
+        <a href="https://tuffluffjimmy.github.io/CoZone/">Link</a>
         <img src="./Images/Empty file.png" alt="file icon">
         <br>
         <p id=link>empty link</p>
