added links to projects 1 and 2

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
         <h1>Links</h1>
         <h2>Project 1 Cozone</h2>
         <br>
-        <a href="https://tuffluffjimmy.github.io/CoZone/">Link</a>
-        <img src="./Images/Empty file.png" alt="file icon">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQGyOWvr4W0Pow/company-logo_200_200/0?e=2159024400&v=beta&t=itrwplyUUwPAVxqxN8THySQds9p401UaOtZIurSBVnA" alt="file icon">
         <br>
-        <p id=link>empty link</p>
-        <img src="./Images/Empty file.png" alt="file icon">
+        <a href="google.com">Not completed</a>
+        <img src="https://applets.imgix.net/https%3A%2F%2Fassets.ifttt.com%2Fimages%2Fchannels%2F2107379463%2Ficons%2Fmonochrome_large.png%3Fversion%3D0?w=240&h=240&auto=compress&s=a8d2b0cf3024bd42a147246f26af6918" alt="file icon">
         <br>
-        <p id=link>empty link</p>
+        <a href="https://github.com/benroznos">GitHub</a>
       </div>
     </div>
     <div class="row" id="box">
