--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,14 @@
     </nav>
     <nav class="row">
       <nav id=box class="col-md-6">
-        <img src="./Images/Empty file.png" class="img-fluid" alt="Responsive image">
+        <img src="https://www.logolynx.com/images/logolynx/6a/6acd028d70b55ab3c2dc072df4c95857.png" class="img-fluid" alt="Responsive image">
         <h1>project 1</h1>
+        <a href="https://tuffluffjimmy.github.io/CoZone/">CoZone</a>
       </nav>
       <nav id=box class="col-md-6">
-        <img src="./Images/Empty file.png" class="img-fluid" alt="Responsive image">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Metro-M.svg" class="img-fluid" alt="Responsive image">
         <h1>project 2</h1>
+        <a href="https://salty-reef-54366.herokuapp.com/index.html#">Movie Blog app</a>
       </nav>
     </nav>
     <nav class="row">
